Initial reconfiguration of sblibcl package debian dir.

--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
-Source: cryptlib
+Source: synchronet
 Priority: extra
 Maintainer: Robert James Clay <jame@rocasa.org>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 Section: libs
 
-Package: libcl
+Package: sblibcl
 Section: libs
-Architecture: any
+Architecture: i386
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: add encryption and authentication services to software
  cryptlib consists of a set of layered security services and associated
@@ -15,17 +15,19 @@ Description: add encryption and authentication services to software
  communications security capabilities. Much like the network reference model,
  cryptlib contains a series of layers that provide each level of abstraction,
  with higher layers building on the capabilities provided by the lower layers.
- This is the runtime package for the library.
+ This is the runtime package for the library, derived from the source
+ package for Synchronet BBS.
 
-Package: libcl-dev
+Package: sblibcl-dev
 Section: libdevel
-Architecture: any
-Depends: libcl (= ${Source-Version})
+Architecture: i386
+Depends: sblibcl (= ${Source-Version})
 Description: add encryption and authentication services to software
  cryptlib consists of a set of layered security services and associated
  programming interfaces that provide an integrated set of information and
  communications security capabilities. Much like the network reference model,
  cryptlib contains a series of layers that provide each level of abstraction,
  with higher layers building on the capabilities provided by the lower layers.
- This is the development package for the library.
+ This is the development package for the library, derived from the source
+ package for Synchronet BBS.
 
