--- a/debian/examples/binkd.cfg
+++ b/debian/examples/binkd.cfg
@@ -9,7 +9,7 @@
 # or
 #	domain <new-name> alias-for <name>
 #
-domain fidonet /var/spool/sbbscvs/outb 1
+domain fidonet /var/spool/sbbsdev/outb 1
 domain fidonet.org alias-for fidonet
 domain fidonet.net alias-for fidonet
 domain fidonet.rus alias-for fidonet
@@ -150,8 +150,8 @@ pid-file /var/run/ftn/binkd.pid
 #
 # Inbound directory for secure and non-secure links
 #
-inbound /var/spool/sbbscvs/inb
-inbound-nonsecure /var/spool/sbbscvs/inb
+inbound /var/spool/sbbsdev/inb
+inbound-nonsecure /var/spool/sbbsdev/inb
 
 #
 # Directory for incomplete receiving files (.hr and .dt),
@@ -227,12 +227,12 @@ kill-old-partial-files 86400
 #
 # Scan T-Mail boxes (short and long)
 #
-#filebox   /var/spool/sbbscvs/boxes
+#filebox   /var/spool/sbbsdev/boxes
 
 #
 # Scan theBrake! long boxes
 #
-#brakebox  /var/spool/sbbscvs/boxes
+#brakebox  /var/spool/sbbsdev/boxes
 
 #
 # Should binkd delete empty boxes?
