--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: sblibcl
+Source: sblibs
 Priority: extra
 Maintainer: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 Section: libs
 
-Package: sblibcl
+Package: sblibs
 Section: libs
 Architecture: i386
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -18,10 +18,10 @@ Description: add encryption and authentication services to software
  This is the runtime package for the library, derived from the source
  package for Synchronet BBS.
 
-Package: sblibcl-dev
+Package: sblibs-dev
 Section: libdevel
 Architecture: i386
-Depends: sblibcl (= ${Source-Version})
+Depends: sblibs (= ${Source-Version})
 Description: add encryption and authentication services to software
  cryptlib consists of a set of layered security services and associated
  programming interfaces that provide an integrated set of information and
