--- a/prj/sbbscvs/debian/rules
+++ b/prj/sbbscvs/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# sbbsdev package debian/rules.
+# sbbscvs package debian/rules.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -17,7 +17,7 @@ endif
 HW := $(shell uname -m)
 
 # Set SBBSDIR to base installation directory.
-export SBBSDIR=/opt/sbbsdev
+export SBBSDIR=/opt/sbbscvs
 
 configure: configure-stamp
 configure-stamp:
@@ -62,7 +62,7 @@ install: build
 	dh_prep
 	dh_installdirs
 
-	# Add here commands to install the package into debian/sbbsdev.
+	# Add here commands to install the package into debian/sbbscvs.
 	#    
 
 # Build architecture-independent files here.
