--- a/debian/control
+++ b/debian/control
@@ -13,5 +13,5 @@ Architecture: all
 Depends: ${misc:Depends}, build-essential, devscripts, cvs, libncurses5-dev, libnspr4-dev, libmozjs-dev, libcap2-dev, libx11-dev
 Description: Development of Synchronet BBS on Debian
  This package enables the development of Synchronet BBS on Debian systems,
- for the creation of Debian packages and/or just compileing the sources
- for local installation.
+ and can be used for the creation of Debian packages and/or just compileing
+ the sources for local installation.
