Correct Vcs entries in sbbscvs debian/control.

--- a/prj/sbbscvs/debian/control
+++ b/prj/sbbscvs/debian/control
@@ -4,9 +4,8 @@ Priority: extra
 Maintainer: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 7.0.15), libncurses5-dev, libnspr4-dev, libmozjs-dev, libx11-dev, sblibcl-dev
 Standards-Version: 3.8.0
-Vcs-Cvs: cvs -d :pserver:anonymous@cvs.synchro.net:/cvsroot/sbbs 
-Vcs-Svn: svn://rocasa.org/syncdeb/sbbscvs/trunk/debian
-Vcs-Browser: http://rocasa.org/cgi-bin/viewvc.cgi/syncdeb/sbbscvs
+Vcs-Git: git://git.rocasa.org/sbbsdeb.git
+Vcs-Browser: http://git.rocasa.org/?p=sbbsdeb.git;a=summary
 Homepage: http://www.synchro.net
 
 Package: sbbscvs
