--- a/prj/sbbscvs/debian/rules
+++ b/prj/sbbscvs/debian/rules
@@ -63,16 +63,16 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/sbbscvs.
-	dh_install src/conio/gcc.linux.$(HW).lib.debug/libciolib_mt.a /opt/synchronet/exec
-	dh_install src/smblib/gcc.linux.$(HW).lib.debug/libsmb.a /opt/synchronet/exec
-	dh_install src/uifc/gcc.linux.$(HW).lib.debug/libuifc_mt.a /opt/synchronet/exec
-	dh_install src/xpdev/gcc.linux.$(HW).lib.debug/libxpdev* /opt/synchronet/exec
-	dh_install src/sbbs3/gcc.linux.$(HW).lib.debug/lib* /opt/synchronet/exec
-	dh_install src/sbbs3/gcc.linux.$(HW).exe.debug/* /opt/synchronet/exec
-	dh_install src/sbbs3/scfg/gcc.linux.$(HW).exe.debug/scfg* /opt/synchronet/exec
-	dh_install src/sbbs3/syncview/gcc.linux.$(HW).exe.debug/syncview /opt/synchronet/exec
-	dh_install src/sbbs3/uedit/gcc.linux.$(HW).exe.debug/uedit /opt/synchronet/exec
-	dh_install src/sbbs3/umonitor/gcc.linux.$(HW).exe.debug/umonitor /opt/synchronet/exec
+	dh_install src/conio/gcc.linux.$(HW).lib.debug/libciolib_mt.a /opt/sbbscvs/exec
+	dh_install src/smblib/gcc.linux.$(HW).lib.debug/libsmb.a /opt/sbbscvs/exec
+	dh_install src/uifc/gcc.linux.$(HW).lib.debug/libuifc_mt.a /opt/sbbscvs/exec
+	dh_install src/xpdev/gcc.linux.$(HW).lib.debug/libxpdev* /opt/sbbscvs/exec
+	dh_install src/sbbs3/gcc.linux.$(HW).lib.debug/lib* /opt/sbbscvs/exec
+	dh_install src/sbbs3/gcc.linux.$(HW).exe.debug/* /opt/sbbscvs/exec
+	dh_install src/sbbs3/scfg/gcc.linux.$(HW).exe.debug/scfg* /opt/sbbscvs/exec
+	dh_install src/sbbs3/syncview/gcc.linux.$(HW).exe.debug/syncview /opt/sbbscvs/exec
+	dh_install src/sbbs3/uedit/gcc.linux.$(HW).exe.debug/uedit /opt/sbbscvs/exec
+	dh_install src/sbbs3/umonitor/gcc.linux.$(HW).exe.debug/umonitor /opt/sbbscvs/exec
 	#    
 
 # Build architecture-independent files here.
