--- a/prj/sblibs/v315/debian/rules
+++ b/prj/sblibs/v315/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# debian/rules for sblibcl package;  uses debhelper.
+# debian/rules for sblibcl package.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
