--- a/prj/sbbscvs/debian/control
+++ b/prj/sbbscvs/debian/control
@@ -4,8 +4,8 @@ Priority: extra
 Maintainer: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 7.0.15), libncurses5-dev, libnspr4-dev, libmozjs-dev, libx11-dev, sblibcl-dev
 Standards-Version: 3.8.0
-Vcs-Git: git://github.com/jame/sbbsdev.git
-Vcs-Browser: http://github.com/jame/sbbsdev
+Vcs-Git: git://github.com/ftnapps/sbbsdev.git
+Vcs-Browser: http://github.com/ftnapps/sbbsdev
 Homepage: http://www.synchro.net
 
 Package: sbbscvs
